--- a/jtdl-web/src/main/webapp/WEB-INF/web.xml
+++ b/jtdl-web/src/main/webapp/WEB-INF/web.xml
@@ -43,10 +43,10 @@
       <param-value>UTF-8</param-value>
     </init-param>
   </filter>
-  <filter-mapping>
-    <filter-name>EncodingFilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
+  <!--<filter-mapping>-->
+    <!--<filter-name>EncodingFilter</filter-name>-->
+    <!--<url-pattern>/*</url-pattern>-->
+  <!--</filter-mapping>-->
 
   <filter>
     <filter-name>SecurityFilter</filter-name>
