--- a/jtdl-web/pom.xml
+++ b/jtdl-web/pom.xml
@@ -23,7 +23,7 @@
         <finalName>${project.artifactId}</finalName>
 
         <sourceDirectory>src/main/java</sourceDirectory>
-        <testSourceDirectory>src/test/java</testSourceDirectory>
+        <!--<testSourceDirectory>src/test/java</testSourceDirectory>-->
         <resources>
             <resource>
                 <includes>
