--- a/jtdl-web/src/main/webapp/WEB-INF/web.xml
+++ b/jtdl-web/src/main/webapp/WEB-INF/web.xml
@@ -43,23 +43,23 @@
       <param-value>UTF-8</param-value>
     </init-param>
   </filter>
-  <!--<filter-mapping>-->
-    <!--<filter-name>EncodingFilter</filter-name>-->
-    <!--<url-pattern>/*</url-pattern>-->
-  <!--</filter-mapping>-->
+  <filter-mapping>
+    <filter-name>EncodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 
-  <filter>
-    <filter-name>SecurityFilter</filter-name>
-    <filter-class>com.zdpzsp.frame.filter.SecurityFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>SecurityFilter</filter-name>
-    <url-pattern>/report/*</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-    <filter-name>SecurityFilter</filter-name>
-    <url-pattern>/system/*</url-pattern>
-  </filter-mapping>
+  <!--<filter>-->
+    <!--<filter-name>SecurityFilter</filter-name>-->
+    <!--<filter-class>com.zdpzsp.frame.filter.SecurityFilter</filter-class>-->
+  <!--</filter>-->
+  <!--<filter-mapping>-->
+    <!--<filter-name>SecurityFilter</filter-name>-->
+    <!--<url-pattern>/report/*</url-pattern>-->
+  <!--</filter-mapping>-->
+  <!--<filter-mapping>-->
+    <!--<filter-name>SecurityFilter</filter-name>-->
+    <!--<url-pattern>/system/*</url-pattern>-->
+  <!--</filter-mapping>-->
 
 
 
